# POO2021-1JJFA

./: Ensayo E-Waste.docx  README.md
Figuras - clase abstracta/: Main.cpp  makefile
Figuras - clase abstracta/Controller/: FigurasController.cpp  FigurasController.h
Figuras - clase abstracta/Model/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  FiguraGeometrica.cpp  FiguraGeometrica.h  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h
Figuras - clase abstracta/View/: View.cpp  View.h
POSGSOFT/: Autoevaluacion.docx  Manual técnico.docx  acta.cpp  acta.h  calificacion.cpp  calificacion.h  criterio.h  jurado.cpp  jurado.h  main.cpp  makefile  persona.h
POSGSOFT/Codigo/: Actas.txt  acta.cpp  acta.h  calificacion.cpp  calificacion.h  criterio.cpp  criterio.h  main.cpp  makefile  persona.cpp  persona.h  registro.cpp  registro.h
T1/: dos.cpp  reporte.txt  tres.cpp  uno.cpp
T2/: Circulo.cpp  Circulo.h  Figuras.cpp  Main.cpp  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h  makefile
casino/: CMakeLists.txt  integrantes.txt
casino/Controller/: Controller.cpp  Controller.h
casino/Model/: AdivinoParesImpares.cpp  AdivinoParesImpares.h  Casino.cpp  Casino.h  DosColores.cpp  Jugador.cpp  Jugador.h  Mayor13.cpp  Mayor13.h  PiedraPapelTijera.cpp  PiedraPapelTijera.h  sacaTres.cpp  sacaTres.h
casino/View/: View.cpp  View.h
